<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">自贡职校</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_news">新闻中心</string>
    <string name="main_notifications">通知公告</string>
    <string name="main_walkinto_campus">走进校园</string>
    <string name="main_demonstration_school">示范校</string>
    <string name="main_shortterm_training">成教短训</string>
    <string name="main_admission_employment">招生就业</string>
    <string name="main_download_manage">下载管理</string>
    
    <string name="campustyle">校园风貌</string>
    

    <!-- 自定义控件 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>